[package]
name = "greentask"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/DenisKolodin/greentask/"
homepage = "https://github.com/DenisKolodin/greentask/"
#documentation = ""
description = """Library to use coroutines as green tasks."""

[dependencies]
coroutine = { git = "https://github.com/rustcc/coroutine-rs" }

